--- a/components/layout/home/home.module.scss
+++ b/components/layout/home/home.module.scss
@@ -12,37 +12,18 @@
 	align-items: center;
 }
 
-.footer {
-	display: flex;
-	flex: 1;
-	padding: 2rem 0;
-	border-top: 0.0625rem solid #eaeaea;
-	justify-content: center;
-	align-items: center;
-}
-
-.footer a {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	flex-grow: 1;
-}
-
-.title a {
-	color: #0070f3;
-	text-decoration: none;
-}
-
-.title a:hover,
-.title a:focus,
-.title a:active {
-	text-decoration: underline;
-}
-
 .title {
-	margin: 0;
-	line-height: 1.15;
-	font-size: 4rem;
+	@apply font-heading font-bold text-6xl m-0 leading-tight;
+
+	a {
+		@apply text-skin-brand;
+		text-decoration: none;
+		&:hover,
+		&:focus,
+		&:active {
+			text-decoration: underline;
+		}
+	}
 }
 
 .title,
