--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,16 +1,9 @@
-html,
-body {
-	padding: 0;
-	margin: 0;
-	font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-		Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-a {
-	color: inherit;
-	text-decoration: none;
-}
-
-* {
-	box-sizing: border-box;
-}
+/* stylelint-disable no-invalid-position-at-import-rule */
+@import 'base/variables';
+@import 'base/mixins';
+@import 'base/root';
+/* stylelint-enable no-invalid-position-at-import-rule */
