--- a/styles/base/variables/_theme-default.scss
+++ b/styles/base/variables/_theme-default.scss
@@ -6,14 +6,14 @@
 	//contrast
 
 	$colorsContrast: (
-		50: #171717,
-		100: #262626,
-		200: #404040,
-		300: #525252,
-		400: #737373,
+		50: #121212,
+		100: #202020,
+		200: #333333,
+		300: #414141,
+		400: #8f8f8f,
 		500: #a3a3a3,
-		600: #d4d4d4,
-		700: #e5e5e5,
+		600: #cccccc,
+		700: #d9d9d9,
 		800: #f5f5f5,
 		900: #fafafa,
 	) !default;
