style: button text

--- a/components/partial/button/btn.module.scss
+++ b/components/partial/button/btn.module.scss
@@ -2,5 +2,5 @@
 
 .btn {
 	padding: 0.5em 1.5em;
-	@apply bg-skin-brand rounded inline-flex text-skin-inverted font-semibold whitespace-nowrap;
+	@apply bg-skin-brand rounded inline-flex text-skin-inverted font-semibold whitespace-nowrap uppercase text-base;
 }
