--- a/components/block/textMedia/style.module.scss
+++ b/components/block/textMedia/style.module.scss
@@ -12,7 +12,7 @@
 	@apply text-4xl font-heading font-bold;
 }
 .content {
-	@apply prose lg__prose-lg mt-6;
+	@apply prose lg__prose-lg mt-6 font-normal;
 }
 .footer {
 	@apply mt-10 flex gap-4;
