--- a/components/partial/button/btn.module.scss
+++ b/components/partial/button/btn.module.scss
@@ -2,5 +2,9 @@
 
 .btn {
 	padding: 0.5em 1.5em;
-	@apply bg-skin-brand rounded inline-flex text-skin-inverted font-semibold whitespace-nowrap uppercase text-base;
+	@apply rounded inline-flex font-semibold whitespace-nowrap uppercase text-base bg-skin-brand text-skin-inverted;
+}
+
+.secondary {
+	@apply bg-skin-bg text-skin-base border-2 border-solid border-red-500;
 }
