--- a/components/partial/date/date.module.scss
+++ b/components/partial/date/date.module.scss
@@ -1,3 +1,21 @@
 .event {
-	@apply flex flex-col bg-green-600;
+	@apply flex flex-col justify-between relative;
+}
+
+.dot {
+	@apply w-6 h-6 bg-brand rounded-full z-10;
+
+	box-shadow: 0em 0em 0em 0.625em rgba(87, 197, 253, 0.4);
+}
+
+.date {
+	@apply py-4 prose;
+}
+
+.list {
+	@apply flex flex-col grow pb-12 justify-center;
+}
+
+.line {
+	@apply w-0 h-32 border-solid border-skin-inverted border-r-4;
 }
