--- a/components/partial/heading/heading.module.scss
+++ b/components/partial/heading/heading.module.scss
@@ -16,6 +16,10 @@
 	@apply text-3xl;
 }
 
+.h3 {
+	@apply text-2xl;
+}
+
 .caption {
 	@apply text-2xl font-sans font-normal text-skin-brand normal-case;
 }
