--- a/components/partial/footerSection/footerSection.module.scss
+++ b/components/partial/footerSection/footerSection.module.scss
@@ -1,8 +1,8 @@
 .footersection {
-	@apply w-1/2;
+	@apply w-1/2 text-skin-inverted flex flex-col gap-y-4;
 }
 
-.heading {
+.title {
 	@apply font-heading font-bold text-2xl text-skin-inverted;
 }
 
