--- a/styles/base/variables/_theme-default.scss
+++ b/styles/base/variables/_theme-default.scss
@@ -13,7 +13,7 @@
 		400: #8f8f8f,
 		500: #a3a3a3,
 		600: #cccccc,
-		700: #d9d9d9,
+		700: #d7deea,
 		800: #f5f5f5,
 		900: #fafafa,
 	) !default;
