--- a/components/block/blockWrapper/block.module.scss
+++ b/components/block/blockWrapper/block.module.scss
@@ -1,7 +1,8 @@
 /** @define block */
 
 .block {
-	@apply py-xl-5xl border-b-1;
+	// @apply py-xl-5xl border-b-1; //with white border
+	@apply py-xl-5xl; //without
 
 	&__inner {
 		@apply w-9/10 max-w-7xl mx-auto;
