feat: footer single type implemented

--- a/components/partial/footerSection/footerSection.module.scss
+++ b/components/partial/footerSection/footerSection.module.scss
@@ -7,5 +7,5 @@
 }
 
 .description {
-	@apply font-sans font-normal text-base text-skin-inverted text-xl py-4;
+	@apply font-sans font-normal text-skin-inverted text-xl py-4;
 }
