--- a/components/partial/heading/heading.module.scss
+++ b/components/partial/heading/heading.module.scss
@@ -1,11 +1,11 @@
 /** @define heading */
 
 .heading {
-	@apply py-4;
+	@apply py-4 text-skin-base;
 }
 
 .title {
-	@apply font-heading font-bold text-skin-base py-6;
+	@apply font-heading font-bold py-6;
 }
 
 .h1 {
@@ -17,7 +17,7 @@
 }
 
 .h3 {
-	@apply text-2xl;
+	@apply text-2xl text-skin-inverted;
 }
 
 .caption {
