--- a/components/block/team/team.module.scss
+++ b/components/block/team/team.module.scss
@@ -1,9 +1,9 @@
 .team {
-	@apply bg-gradient-radial from-transparent via-brand-500 to-transparent relative;
+	@apply bg-gradient-to-t from-transparent via-brand-500 to-transparent relative;
 }
 
 .box {
-	@apply absolute h-2/6 z-0 bg-contrast-50 top-1/2 -left-1/3;
+	@apply absolute h-1/2 z-0 bg-contrast-50 top-1/3 -left-1/3;
 
 	width: 166%;
 	border-radius: 50% / 100%;
@@ -12,7 +12,7 @@
 }
 
 .spacing {
-	@apply absolute w-full h-1/2 z-0 bg-contrast-50;
+	@apply absolute w-full h-1/3 z-0 bg-contrast-50 outline-4 outline-contrast-50;
 }
 
 .inner {
