--- a/components/block/team/team.module.scss
+++ b/components/block/team/team.module.scss
@@ -3,7 +3,9 @@
 }
 
 .box {
-	@apply absolute h-1/2 z-0 bg-contrast-50 top-1/3 -left-1/3;
+	@apply absolute h-2/3 z-0 bg-contrast-50 -left-1/3;
+
+	top: 10%;
 
 	width: 166%;
 	border-radius: 50% / 100%;
@@ -12,9 +14,15 @@
 }
 
 .spacing {
-	@apply absolute w-full h-1/3 z-0 bg-contrast-50 outline-4 outline-contrast-50;
+	@apply absolute w-full z-0 bg-contrast-50 outline-4 outline-contrast-50;
+
+	height: 10%;
 }
 
 .inner {
 	@apply relative;
+}
+
+.placeholder {
+	@apply h-xl-5xl;
 }
