style: better gradients

--- a/components/block/team/team.module.scss
+++ b/components/block/team/team.module.scss
@@ -1,5 +1,5 @@
 .team {
-	@apply bg-gradient-to-t from-transparent via-brand-500 to-transparent relative;
+	@apply bg-gradient-radial-at-t from-transparent via-brand-500 to-transparent relative;
 }
 
 .box {
