--- a/components/partial/heading/heading.module.scss
+++ b/components/partial/heading/heading.module.scss
@@ -9,14 +9,18 @@
 }
 
 .h1 {
-	@apply text-5xl uppercase;
+	@apply text-6xl uppercase;
 }
 
 .h2 {
-	@apply text-3xl;
+	@apply text-4xl normal-case;
 }
 
 .h3 {
+	@apply text-3xl uppercase;
+}
+
+.footer {
 	@apply text-2xl text-skin-inverted;
 }
 
