--- a/components/partial/date/date.module.scss
+++ b/components/partial/date/date.module.scss
@@ -1,4 +1,4 @@
-.event {
+.date {
 	@apply flex flex-col justify-between w-full;
 }
 
@@ -8,12 +8,12 @@
 	box-shadow: 0em 0em 0em 0.625em rgba(87, 197, 253, 0.4);
 }
 
-.date {
+.title {
 	@apply py-4 prose ml-6;
 }
 
 .list {
-	@apply flex flex-col grow pb-12 justify-center ml-8;
+	@apply flex flex-col grow justify-end ml-9;
 }
 
 .graphic {
@@ -22,4 +22,24 @@
 
 .line {
 	@apply w-full h-px absolute top-3 border-dashed border-t-4 border-contrast-400 z-0;
+}
+
+.event {
+	@apply flex flex-row items-center;
+}
+
+.eventdot {
+	@apply border-1 border-contrast-900 rounded-full w-4 h-4 align-middle bg-skin-bg z-10;
+}
+
+.eventline {
+	@apply border-r-1 border-contrast-900 h-full absolute top-0 left-2;
+}
+
+.iconwrapper {
+	@apply relative w-8 h-full flex flex-row items-center;
+}
+
+.eventname {
+	@apply py-4;
 }
