--- a/components/partial/footerSection/footerSection.module.scss
+++ b/components/partial/footerSection/footerSection.module.scss
@@ -14,6 +14,10 @@
 	@apply grid grid-cols-1 sm__grid-cols-2 max-w-sm;
 
 	> a {
-		@apply text-skin-inverted font-medium text-base;
+		@apply text-skin-inverted font-medium text-base flex flex-row items-center p-2 gap-2;
+
+		> svg {
+			@apply w-4 h-4;
+		}
 	}
 }
