--- a/components/layout/header/header.module.scss
+++ b/components/layout/header/header.module.scss
@@ -1,23 +1,43 @@
 /** @define header */
 
 .header {
-	@apply px-6 py-4 bg-skin-bg text-2xl;
+	@apply flex items-center px-6 py-4 bg-skin-bg text-2xl;
 
 	&--alternate {
 		@apply bg-skin-bg;
 	}
 }
 
-.navwrapper {
-	@apply flex mx-auto justify-between;
+.menu {
+	@apply fixed flex flex-col justify-between right-0 top-0 h-screen max-w-90 bg-skin-bg z-99 p-8 rounded-tl-md rounded-bl-md;
+
+	@screen md {
+		@apply static flex-row flex-1 justify-between w-auto max-w-none h-auto bg-transparent right-auto top-auto p-0 ml-8 z-auto;
+	}
+}
+
+.menu__backdrop {
+	@apply fixed inset-0 bg-skin-brand;
+
+	@screen md {
+		@apply hidden;
+	}
 }
 
 .mainnav {
-	@apply flex space-x-10 items-center;
+	// @apply flex flex-col space-y-4;
+
+	@screen md {
+		@apply flex space-x-10 items-center;
+	}
 }
 
 .navelements {
 	@apply font-medium text-lg space-x-10 uppercase;
+
+	@screen md {
+		@apply flex space-x-10 items-center;
+	}
 
 	a {
 		@apply text-skin-base;
@@ -36,4 +56,8 @@
 
 .title {
 	@apply text-2xl;
+}
+
+.menu__button {
+	@apply absolute right-0 top-0;
 }
