--- a/components/layout/header/header.module.scss
+++ b/components/layout/header/header.module.scss
@@ -17,7 +17,7 @@
 }
 
 .header {
-	@apply flex items-center justify-between px-6 py-4 bg-skin-bg text-2xl;
+	@apply sticky top-0 flex items-center justify-between px-6 py-4 bg-skin-bg text-2xl z-99;
 
 	&--alternate {
 		@apply bg-skin-bg;
