--- a/components/partial/teamMember/teamMember.module.scss
+++ b/components/partial/teamMember/teamMember.module.scss
@@ -9,7 +9,7 @@
 }
 
 .description {
-	@apply flex flex-row justify-center items-center gap-4 mt-6;
+	@apply flex flex-row justify-center gap-4 mt-6;
 }
 
 .name {
@@ -17,7 +17,7 @@
 }
 
 .imagewrapper {
-	@apply border-2 border-brand-300 rounded-full w-16 h-16 relative;
+	@apply border-2 border-brand-300 rounded-full w-16 h-16 mt-2 relative;
 }
 
 .info {
