--- a/components/block/partners/partners.module.scss
+++ b/components/block/partners/partners.module.scss
@@ -7,11 +7,11 @@
 }
 
 .images {
-	@apply h-fit w-full mt-20 mb-28 grid grid-cols-2 md__grid-cols-5 gap-x-16 gap-y-16 md__gap-x-3;
+	@apply h-fit w-full mt-20 mb-28 grid grid-cols-2 md__grid-cols-5 gap-x-8 gap-y-8 md__gap-x-3;
 }
 
 .lower {
-	@apply flex flex-row mt-20;
+	@apply flex flex-col md__flex-row mt-20;
 }
 
 .listtitle {
