--- a/components/layout/footer/footer.module.scss
+++ b/components/layout/footer/footer.module.scss
@@ -33,7 +33,7 @@
 }
 
 .inner {
-	@apply grid grid-cols-1 md__grid-cols-2 gap-x-40 gap-y-20;
+	@apply grid grid-cols-1 md__grid-cols-2 gap-x-0 gap-y-20 mx-10;
 }
 
 .menu {
