style(footer): spacing and grid

--- a/components/partial/footerSection/footerSection.module.scss
+++ b/components/partial/footerSection/footerSection.module.scss
@@ -7,7 +7,7 @@
 }
 
 .description {
-	@apply font-sans font-normal text-skin-inverted text-xl py-4;
+	@apply font-sans font-normal text-skin-inverted text-xl pb-4;
 }
 
 .links {
