--- a/components/layout/footer/footer.module.scss
+++ b/components/layout/footer/footer.module.scss
@@ -37,7 +37,7 @@
 }
 
 .sections {
-	@apply grid w-full gap-8 w-9/10 mx-auto py-xl-5xl;
+	@apply grid gap-16 w-9/10 mx-auto py-xl-5xl;
 
 	@screen md {
 		@apply grid-cols-2 w-full;
