feat(accordion): basic functionality

--- a/components/partial/accordion/accordion.module.scss
+++ b/components/partial/accordion/accordion.module.scss
@@ -1,5 +1,47 @@
 /** @define accordion */
 
 .accordion {
-	//styles here
+	@apply w-full relative mx-auto h-fit p-2 rounded-md transition-all;
+}
+
+.title {
+	@apply p-4 relative border-b-1 border-contrast-300 w-full text-left flex flex-row font-normal text-lg;
+
+	> .svg {
+		@apply w-4 h-4;
+	}
+
+	&:hover {
+		@apply text-brand-300;
+	}
+
+	&::after {
+		@apply text-xl absolute right-7;
+		content: '+';
+	}
+
+	&.expanded {
+		@apply border-none;
+
+		> .svg {
+			@apply rotate-180;
+		}
+
+		&::after {
+			@apply text-xl;
+			content: '-';
+		}
+	}
+}
+
+.content {
+	@apply w-full p-4 border-b-1 border-contrast-300 font-normal text-lg;
+}
+
+.show {
+	@apply visible;
+}
+
+.hide {
+	@apply hidden invisible;
 }
