feat(accordion): animation

--- a/components/partial/accordion/accordion.module.scss
+++ b/components/partial/accordion/accordion.module.scss
@@ -36,12 +36,35 @@
 
 .content {
 	@apply w-full p-4 border-b-1 border-contrast-300 font-normal text-lg;
+	animation: fadeIn 0.5s forwards;
 }
 
 .show {
-	@apply visible;
+	@apply block;
+}
+
+.hiding {
+	animation: fadeOut 0.3s forwards;
 }
 
 .hide {
-	@apply hidden invisible;
+	@apply hidden;
+}
+
+@keyframes fadeIn {
+	0% {
+		opacity: 0;
+	}
+	100% {
+		opacity: 1;
+	}
+}
+
+@keyframes fadeOut {
+	0% {
+		opacity: 1;
+	}
+	100% {
+		opacity: 0;
+	}
 }
