--- a/components/partial/button/btn.module.scss
+++ b/components/partial/button/btn.module.scss
@@ -2,7 +2,7 @@
 
 .btn {
 	padding: 0.5em 1.5em;
-	@apply rounded inline-flex font-semibold whitespace-nowrap uppercase text-base bg-skin-brand text-skin-inverted border-2 border-solid border-skin-base;
+	@apply rounded inline-flex font-semibold whitespace-nowrap uppercase text-base bg-skin-brand text-skin-inverted border-2 border-solid border-skin-base duration-300;
 
 	&:hover {
 		@apply bg-skin-bg text-skin-base border-2 border-solid border-brand;
