--- a/components/block/team/team.module.scss
+++ b/components/block/team/team.module.scss
@@ -1,5 +1,5 @@
 .team {
-	@apply bg-gradient-radial-at-t from-brand-500 to-transparent relative;
+	@apply md__bg-gradient-radial-at-t from-brand-500 to-transparent relative;
 }
 
 .box {
@@ -31,7 +31,10 @@
 }
 
 .graphic {
-	@apply w-screen absolute overflow-hidden;
-
+	@apply w-screen absolute overflow-hidden hidden;
 	height: 76%;
+
+	@screen md {
+		@apply block;
+	}
 }
