--- a/components/layout/footer/footer.module.scss
+++ b/components/layout/footer/footer.module.scss
@@ -29,7 +29,11 @@
 }
 
 .graphic {
-	@apply w-full h-80 relative overflow-hidden;
+	@apply w-full h-60 relative overflow-hidden;
+
+	@screen lg {
+		@apply h-80;
+	}
 }
 
 .inner {
@@ -37,10 +41,10 @@
 }
 
 .sections {
-	@apply grid gap-16 w-9/10 mx-auto py-xl-5xl;
+	@apply grid gap-24 w-9/10 mx-auto py-xl-5xl justify-center;
 
 	@screen md {
-		@apply grid-cols-2 w-full;
+		@apply grid-cols-2 w-full gap-16;
 	}
 }
 
