--- a/components/partial/accordion/accordion.module.scss
+++ b/components/partial/accordion/accordion.module.scss
@@ -1,11 +1,11 @@
 /** @define accordion */
 
 .accordion {
-	@apply w-full relative mx-auto h-fit p-2 rounded-md transition-all;
+	@apply w-full relative mx-auto h-fit p-2 rounded-md transition-all border-b-1 border-contrast-300;
 }
 
 .title {
-	@apply p-4 relative border-b-1 border-contrast-300 w-full text-left flex flex-row font-normal text-lg;
+	@apply p-4 relative w-full text-left flex flex-row font-normal text-lg;
 
 	> .svg {
 		@apply w-4 h-4;
@@ -21,8 +21,6 @@
 	}
 
 	&.expanded {
-		@apply border-none;
-
 		> .svg {
 			@apply rotate-180;
 		}
@@ -35,7 +33,7 @@
 }
 
 .content {
-	@apply w-full p-4 border-b-1 border-contrast-300 font-normal text-lg;
+	@apply w-full p-4 font-normal prose md__prose-lg mr-0;
 	animation: fadeIn 0.5s forwards;
 }
 
