feat(button): icon primary buttons

--- a/components/partial/button/btn.module.scss
+++ b/components/partial/button/btn.module.scss
@@ -1,11 +1,25 @@
 /** @define btn */
 
+.iconwrapper {
+	@apply grid h-full place-items-center bg-contrast-900 p-1 ml-2 rounded-md shadow-sm duration-300;
+
+	> svg {
+		@apply w-4 h-4;
+
+		stroke: url(#gradient);
+	}
+}
+
 .btn {
 	padding: 0.5em 1.5em;
 	@apply rounded inline-flex font-semibold whitespace-nowrap uppercase text-base bg-skin-brand text-skin-inverted border-2 border-solid border-skin-base duration-300;
 
 	&:hover {
 		@apply bg-skin-bg text-skin-base border-2 border-solid border-brand;
+
+		& > .iconwrapper {
+			@apply bg-transparent;
+		}
 	}
 }
 
@@ -15,4 +29,10 @@
 	&:hover {
 		@apply text-base bg-skin-brand text-skin-inverted border-skin-base;
 	}
+}
+
+.icon {
+	padding: 0.5em;
+
+	@apply pl-4;
 }
