feat(input): checkmark

--- a/components/partial/input/input.module.scss
+++ b/components/partial/input/input.module.scss
@@ -1,4 +1,8 @@
 .input {
+	@apply flex flex-col;
+}
+
+.email {
 	@apply bg-contrast-100 max-w-sm flex flex-row rounded-lg items-center p-1;
 
 	> input {
@@ -14,5 +18,17 @@
 
 			stroke: url(#gradient);
 		}
+	}
+}
+
+.legal {
+	@apply p-2 flex gap-2 items-center;
+
+	> input {
+		@apply rounded-sm bg-contrast-100 w-5 h-5;
+	}
+
+	> label {
+		@apply prose font-normal;
 	}
 }
