--- a/components/layout/footer/footer.module.scss
+++ b/components/layout/footer/footer.module.scss
@@ -6,6 +6,14 @@
 	}
 }
 
+.graphic {
+	@apply w-full h-[20vw] relative overflow-hidden;
+
+	@screen lg {
+		@apply max-h-64;
+	}
+}
+
 .curve1 {
 	@apply absolute h-full z-0 bg-contrast-50 -left-5p;
 
@@ -26,14 +34,6 @@
 
 .spacing {
 	@apply absolute w-full z-0 bg-contrast-50 outline-4 outline-contrast-50 h-10;
-}
-
-.graphic {
-	@apply w-full h-60 relative overflow-hidden;
-
-	@screen lg {
-		@apply h-80;
-	}
 }
 
 .inner {
