ref(accordion): Adjust accordion composition

--- a/components/partial/accordion/accordion.module.scss
+++ b/components/partial/accordion/accordion.module.scss
@@ -1,62 +1,5 @@
 /** @define accordion */
 
 .accordion {
-	@apply w-full relative mx-auto h-fit p-2 rounded-md transition-all border-b-1 border-contrast-300;
-}
-
-.icon {
-	@apply w-6 h-6 duration-200 rotate-0;
-}
-
-.title {
-	@apply p-4 relative w-full text-left flex flex-row font-normal text-xl justify-between items-center;
-
-	> .svg {
-		@apply w-4 h-4;
-	}
-
-	&:hover {
-		@apply text-brand-300;
-	}
-
-	&.expanded {
-		> .icon {
-			@apply rotate-180;
-		}
-	}
-}
-
-.content {
-	@apply w-full p-4 font-normal prose md__prose-lg mr-0;
-	animation: fadeIn 0.5s forwards;
-}
-
-.show {
-	@apply block;
-}
-
-.hiding {
-	animation: fadeOut 0.3s forwards;
-}
-
-.hide {
-	@apply hidden;
-}
-
-@keyframes fadeIn {
-	0% {
-		opacity: 0;
-	}
-	100% {
-		opacity: 1;
-	}
-}
-
-@keyframes fadeOut {
-	0% {
-		opacity: 1;
-	}
-	100% {
-		opacity: 0;
-	}
+	@apply w-full relative max-w-5xl mx-auto;
 }
