--- a/components/layout/header/header.module.scss
+++ b/components/layout/header/header.module.scss
@@ -1,7 +1,7 @@
 /** @define header */
 
 .menu {
-	@apply fixed flex flex-col justify-between right-0 top-0 h-screen max-w-90 bg-skin-bg z-99 p-8 rounded-tl-md rounded-bl-md duration-300 translate-x-full;
+	@apply fixed flex flex-col justify-between right-0 top-0 h-screen max-w-90 bg-skin-bg z-99 p-8 pt-24 rounded-tl-md rounded-bl-md duration-300 translate-x-full;
 
 	@screen md {
 		@apply static flex-row flex-1 justify-between items-center w-auto max-w-none h-auto bg-transparent right-auto top-auto p-0 ml-8 z-auto duration-0 translate-x-0;
