--- a/components/block/partners/partners.module.scss
+++ b/components/block/partners/partners.module.scss
@@ -1,5 +1,5 @@
 .partners {
-	@apply prose;
+	//@apply prose;
 }
 
 .description {
@@ -7,7 +7,11 @@
 }
 
 .images {
-	@apply h-fit w-full mt-20 mb-28 grid grid-cols-2 md__grid-cols-5 gap-x-8 gap-y-8 md__gap-x-3;
+	@apply grid grid-cols-2 gap-x-8 gap-y-16 justify-items-center items-center mt-12 mb-xl-8xl max-w-4xl mx-auto;
+
+	@screen md {
+		@apply grid-cols-3;
+	}
 }
 
 .lower {
@@ -19,7 +23,7 @@
 }
 
 .ctawrapper {
-	@apply my-16;
+	@apply mt-16;
 }
 
 .placeholder {
