--- a/components/partial/card/card.module.scss
+++ b/components/partial/card/card.module.scss
@@ -22,3 +22,15 @@
 .image {
 	@apply w-full flex flex-row justify-center my-6;
 }
+
+.notloaded {
+	.cardimage {
+		@apply opacity-0 transition-all duration-1000;
+	}
+}
+
+.loaded {
+	.cardimage {
+		@apply opacity-100 transition-all duration-1000;
+	}
+}
