--- a/components/block/multiTextMedia/multiTextMedia.module.scss
+++ b/components/block/multiTextMedia/multiTextMedia.module.scss
@@ -24,8 +24,12 @@
 
 .imagewrapper {
 	@apply relative;
+}
 
-	> * {
-		@apply absolute left-0 bottom-0;
-	}
+.notloaded {
+	@apply opacity-0 transition-all duration-1000;
+}
+
+.loaded {
+	@apply opacity-100 transition-all duration-1000;
 }
