--- a/components/block/shop/shop.module.scss
+++ b/components/block/shop/shop.module.scss
@@ -39,3 +39,11 @@
 .currentcart {
 	@apply flex flex-row justify-end gap-8 max-w-lg text-lg;
 }
+
+.asterisk {
+	@apply flex flex-row items-center gap-1;
+
+	> svg {
+		@apply w-10 h-5;
+	}
+}
