fix(variants): sizing

--- a/components/partial/variant/variant.module.scss
+++ b/components/partial/variant/variant.module.scss
@@ -1,11 +1,15 @@
 .variant {
-	@apply p-4 border-1 border-contrast-400 shadow-md rounded-lg w-full max-w-lg duration-300 text-left flex flex-col gap-2 prose md__prose-lg cursor-pointer;
+	@apply px-4 border-1 border-contrast-400 shadow-md rounded-lg w-full max-w-lg duration-300 text-left flex flex-col gap-2 prose cursor-pointer;
 
 	&:hover {
 		@apply border-contrast-700;
 
 		box-shadow: -1em -1em 5em rgba(87, 197, 253, 0.15),
 			1em 1em 5em rgba(87, 197, 253, 0.15);
+	}
+
+	@screen md {
+		@apply prose-lg;
 	}
 }
 
